--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "My HelpdeskApp",
-    "short_name": "helpdeskptt",
+    "short_name": "helpdeskN",
     "icons": [
       {
         "src": "/helpdeskptt/icons/icon-512.png",
